src/test/ui/generator/unresolved_type_param.stderr
error[E0698]: type inside generator must be known in this context
  --> $DIR/unresolved_type_param.rs:9:16
   |
LL |         await!(bar());
   |                ^^^ cannot infer type for `T`
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/unresolved_type_param.rs:9:9
   |
LL |         await!(bar());
   |         ^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0698`.
